# pKa

./: .gitignore  CMakeLists.txt  Makefile  README.md
3dplots/: .RData  .Rhistory  3d-dotted-srf-plot.R  3d-tri-srf-plot.R  3dsrfplot.R
apps/: s-chem2splc.cpp  s-create-atom-group-catalog.cpp  s-tri-surface.cpp
data/: posre.itp  protein-54a7-ts.agrp  protein-54a7-ts.agrp~  titrating-sites-in-proteins.gro  titrating-sites-in-proteins.top
include/simploce/: conf.hpp  factory.hpp  types.hpp
include/simploce/bem/: bem.hpp  coulomb.hpp  flat-triangles-bem.hpp  kernels.hpp  matrix-inversion.hpp
include/simploce/protein/: atom-catalog.hpp  atom-group-catalog.hpp  atom-group-spec.hpp  atom-group.hpp  (+13 more)
src/: atom-catalog.cpp  atom-group-catalog.cpp  atom-group-spec.cpp  atom-group.cpp  atom-spec.cpp  atom.cpp  base-content-handler.cpp  cgal-triangulator.cpp  coulomb.cpp  dotted-surface-generator.cpp  edge.cpp  factory.cpp  file-input-source.cpp  flat-triangles-bem.cpp  gmx-atom-group-catalog.cpp  gmx-reader.cpp  kernels.cpp  logger-content-handler.cpp  matrix-inversion.cpp  nsc.cpp  pdb-reader.cpp  protein-structure-content-handler.cpp  protein-structure.cpp  rhs.cpp  sphere-triangulator.cpp  surface.cpp  tetrahedron-triangulator.cpp  triangle.cpp  triangulated-surface.cpp  vertex.cpp
tests/: dotted.srf  dotted.xyz  test-cgal-triangulator.cpp  test-charge-inside-sphere.cpp  test-coulomb.cpp  test-dotted-surface-generation.cpp  test-kernels.cpp  test-lu-eigen.cpp  test-lu.cpp  test-pdb-reader.cpp  test-read-protein-structure.cpp  test-surface.cpp  test-vertex.cpp
(+13 files in other folders)
